# sqldiffer

./: Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.chglog/: config.yml
.github/workflows/: pull_request.yml  release.yml
docker/mysql/initdb.d/: create_table.sql
sqldiffer/: cli.py  differ.py  exceptions.py  main.py
sqldiffer/db/: connection.py  credential.py  sql.py
tests/: result.html  test_differ.py
