[tool.poetry]
name = "sqldiffer"
version = "0.1.0"
description = "Check the difference of MySQL schema (CREATE TABLE)"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/homoluctus/sqldiffer"
keywords = ["MySQL", "Database", "Schema"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8"
]
packages = [
  { include = "sqldiffer" }
]

[tool.poetry.dependencies]
python = "^3.8"
pymysql = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
mypy = "^0.782"
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
isort = "^5.4.2"

[tool.poetry.scripts]
sqldiffer = 'sqldiffer.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
